--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -20,8 +20,12 @@
       "@nx-jneal/feature-games": ["libs/feature-games/src/index.ts"],
       "@nx-jneal/feature-home": ["libs/feature-home/src/index.ts"],
       "@nx-jneal/feature-travels": ["libs/feature-travels/src/index.ts"],
+      "@nx-jneal/ui-codes": ["libs/ui-codes/src/index.ts"],
       "@nx-jneal/ui-components": ["libs/ui-components/src/index.ts"],
       "@nx-jneal/ui-core": ["libs/ui-core/src/index.ts"],
+      "@nx-jneal/ui-games": ["libs/ui-games/src/index.ts"],
+      "@nx-jneal/ui-home": ["libs/ui-home/src/index.ts"],
+      "@nx-jneal/ui-travels": ["libs/ui-travels/src/index.ts"],
       "@nx-jneal/util": ["libs/util/src/index.ts"]
     }
   },
