--- a/libs/ui-components/tsconfig.lib.json
+++ b/libs/ui-components/tsconfig.lib.json
@@ -8,5 +8,9 @@
     "types": []
   },
   "exclude": ["src/**/*.spec.ts", "src/test-setup.ts", "jest.config.ts", "src/**/*.test.ts"],
-  "include": ["src/**/*.ts", "../ui-codes/src/lib/project.component.spec.ts", "../ui-codes/src/lib/project.component.ts"]
+  "include": [
+    "src/**/*.ts",
+    "../ui-codes/src/lib/project.component.spec.ts",
+    "../ui-codes/src/lib/project.component.ts"
+  ]
 }
