--- a/libs/ui-components/tsconfig.spec.json
+++ b/libs/ui-components/tsconfig.spec.json
@@ -7,5 +7,11 @@
     "types": ["jest", "node"]
   },
   "files": ["src/test-setup.ts"],
-  "include": ["jest.config.ts", "src/**/*.test.ts", "src/**/*.spec.ts", "src/**/*.d.ts", "../ui-codes/src/lib/project.component.spec.ts"]
+  "include": [
+    "jest.config.ts",
+    "src/**/*.test.ts",
+    "src/**/*.spec.ts",
+    "src/**/*.d.ts",
+    "../ui-codes/src/lib/project.component.spec.ts"
+  ]
 }
