initial designs complete

--- a/libs/ui-components/tsconfig.lib.json
+++ b/libs/ui-components/tsconfig.lib.json
@@ -12,5 +12,5 @@
     "src/**/*.ts",
     "../ui-codes/src/lib/project.component.spec.ts",
     "../ui-codes/src/lib/project.component.ts"
-  ]
+, "../ui-travels/src/lib/photos.component.ts"  ]
 }
