--- a/libs/shared/ui-core/project.json
+++ b/libs/shared/ui-core/project.json
@@ -1,7 +1,7 @@
 {
   "name": "ui-core",
-  "$schema": "../../node_modules/nx/schemas/project-schema.json",
-  "sourceRoot": "libs/ui-core/src",
+  "$schema": "../../../node_modules/nx/schemas/project-schema.json",
+  "sourceRoot": "libs/shared/ui-core/src",
   "prefix": "lib",
   "projectType": "library",
   "tags": ["type:ui"],
@@ -10,7 +10,7 @@
       "executor": "@nx/jest:jest",
       "outputs": ["{workspaceRoot}/coverage/{projectRoot}"],
       "options": {
-        "jestConfig": "libs/ui-core/jest.config.ts"
+        "jestConfig": "libs/shared/ui-core/jest.config.ts"
       }
     },
     "lint": {
