--- a/tsconfig.base.json
+++ b/tsconfig.base.json
@@ -23,8 +23,8 @@
       "@nx-jneal/feature-home": ["libs/home/feature/src/index.ts"],
       "@nx-jneal/feature-travels": ["libs/travels/feature/src/index.ts"],
       "@nx-jneal/ui-codes": ["libs/codes/ui/src/index.ts"],
-      "@nx-jneal/ui-components": ["libs/ui-components/src/index.ts"],
-      "@nx-jneal/ui-core": ["libs/ui-core/src/index.ts"],
+      "@nx-jneal/ui-components": ["libs/shared/ui-components/src/index.ts"],
+      "@nx-jneal/ui-core": ["libs/shared/ui-core/src/index.ts"],
       "@nx-jneal/ui-games": ["libs/games/ui/src/index.ts"],
       "@nx-jneal/ui-home": ["libs/home/ui/src/index.ts"],
       "@nx-jneal/ui-travels": ["libs/travels/ui/src/index.ts"],
