--- a/apps/web/public/api/codes/projects.json
+++ b/apps/web/public/api/codes/projects.json
@@ -1,12 +1,20 @@
 {
   "cards": [
     {
-      "code": "",
-      "demo": "",
+      "code": "https://github.com/jtneal/nx-jneal",
+      "demo": "https://www.jneal.com",
+      "description": "I built this website for myself because I figured, as a web developer, I need one.",
+      "image": "/images/jneal.png",
+      "tech": ["Angular", "TypeScript", "HTML", "SCSS", "Nx", "ESLint", "Prettier", "Jest", "GitHub Actions"],
+      "title": "jneal.com"
+    },
+    {
+      "code": "https://github.com/jtneal/zwerg",
+      "demo": "https://www.iiizwerg.com",
       "description": "I built this website for a good friend of mine, a talented Twitch streamer known as Zwerg.",
       "image": "/images/iiizwerg.png",
       "tech": ["Angular", "TypeScript", "HTML", "SCSS", "Nx", "ESLint", "Prettier", "Jest", "GitHub Actions"],
-      "title": "iiizwerg"
+      "title": "iiizwerg.com"
     }
   ],
   "icon": "jneal_code",
